# Conway-s-Game-of-Life

./: .gitignore  CMakeLists.txt  README.md
entry/: CMakeLists.txt  entry.c  entry.cpp  entry.h
game_of_life/: CMakeLists.txt  game_of_life.c  game_of_life.cpp  game_of_life.hpp
game_of_life/wrapped/: CMakeLists.txt  wrapped.cpp  wrapped.hpp
llvm-instrumental-pass/: CMakeLists.txt  pass_trace.cpp
llvm-ir-dump/: game_of_life.ll
scripts/: third_party_list.txt
